force-app/main/default/objects/Fiserv_Creds__c/Fiserv_Creds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store Fiserv Creds</description>
    <label>Fiserv Creds</label>
</CustomObject>