force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_ACH_Secret_Key_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_ACH_Secret_Key_Sandbox__c</fullName>
    <label>Fiserv ACH Secret Key Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>