force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_Base_Url__c</fullName>
    <label>Fiserv Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>