force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_Base_Url_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_Base_Url_Sandbox__c</fullName>
    <label>Fiserv Base Url Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>