force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_CC_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_CC_Merchant_ID__c</fullName>
    <label>Fiserv CC Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>