force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_CC_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_CC_Secret_Key__c</fullName>
    <label>Fiserv CC Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>