force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_Funding_Adjustment_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_Funding_Adjustment_GL_Account__c</fullName>
    <label>Fiserv Funding Adjustment GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>