force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_Funding_Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_Funding_Batch_Limit__c</fullName>
    <label>Fiserv Funding Batch Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>