force-app/main/default/objects/Fiserv_Creds__c/fields/Fiserv_Funding_Success_Status__c.field-meta.xml
<CustomField>
    <fullName>Fiserv_Funding_Success_Status__c</fullName>
    <label>Fiserv Funding Success Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>