force-app/main/default/objects/Fiserv_Creds__c/fields/Last_Funding_Date_CC__c.field-meta.xml
<CustomField>
    <fullName>Last_Funding_Date_CC__c</fullName>
    <label>Last Funding Date CC</label>
    <type>Date</type>
</CustomField>